Corrected dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,6 @@ body {
 }
 
 @layer components {
-  body {
-    @apply bg-gray-100;
-  }
   button {
     @apply font-bold py-2 w-32 px-4  border-t-[0.5px] border-l-2 border-r-4 border-b-4 bg-yellow-light border-deep-brown dark:bg-transparent dark:border-yellow-light rounded-lg dark:text-deep-brown text-3xl;
   }
